Fixed a concurrent modification exception when accessing all the player data Reduced permission checking when creating a GUI Posters will be rendered with a missing skin if the correct skin can't be loaded in time.